# Z

./: .gitignore  AGENTS.md  CHANGELOG.md  README.md  pyproject.toml  requirements.txt
tests/: test_async_openai_agent.py  test_cli.py  test_factory.py  test_math_agent.py  test_memory.py  test_orchestrator.py  test_parallel_orchestrator.py  test_runner.py  test_web_agent.py
zlamida_core/: __init__.py  __main__.py
zlamida_core/agents/: async_openai_agent.py  base.py  echo_agent.py  math_agent.py  openai_agent.py  orchestrator_agent.py  parallel_orchestrator_agent.py  shell_agent.py  web_agent.py
zlamida_core/core/: factory.py  launcher.py  log.py  memory.py  process_runner.py  runner.py
zlamida_core/ui/: server.py
