[tool.poetry]
name = "zlamida_core"
version = "0.2.2"
description = "Modular multi-agent system"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "*"
uvicorn = "*"
pydantic = "*"
openai = "*"

[tool.poetry.scripts]
zlamida-core = "zlamida_core.__main__:main"

[tool.poetry.dev-dependencies]
pytest = "*"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
